--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,11 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     crossorigin="anonymous"
   />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
 
   <!-- Google Fonts -->
@@ -66,6 +64,7 @@ nav a {
 
 nav a:hover {
   color: #00bcd4;
+  text-decoration: none;
 }
 
 header::after {
@@ -125,6 +124,7 @@ footer {
     justify-content: center;
     align-items: center;
     min-height: 70vh;
+    
     padding: 2rem 0;
   }
   
@@ -207,7 +207,7 @@ footer {
           <li><a href="/">Home</a></li>
           <li><a href="/posts">Posts</a></li>
           <li><a href="/about">About</a></li>
-          <li><a href="/login">Login</a></li>
+         
         </ul>
       </nav>
     </div>
