--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -122,6 +122,7 @@ header::after {
 .posts {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 2rem;
 }
 
@@ -217,7 +218,7 @@ footer {
   <!-- Footer -->
   <footer>
     <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mt-3">
-        <h5 class="text-uppercase mb-4 font-weight-bold text-primary">CodingLab</h5>
+        <h5 class="text-uppercase mb-4 font-weight-bold text-primary">BLOGIFY</h5>
         <p>
           A simple blogging platform for developers to share their thoughts, tutorials, and tech explorations.
         </p>
