--- a/views/about.ejs
+++ b/views/about.ejs
@@ -233,7 +233,7 @@ footer {
   <!-- Footer -->
   <footer>
     <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mt-3">
-        <h5 class="text-uppercase mb-4 font-weight-bold text-primary">CodingLab</h5>
+        <h5 class="text-uppercase mb-4 font-weight-bold text-primary">BLOGIFY</h5>
         <p>
           A simple blogging platform for developers to share their thoughts, tutorials, and tech explorations.
         </p>
