--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BLOGIFY</title>
     <link
     rel="stylesheet"
     crossorigin="anonymous"
