--- a/views/addblog.ejs
+++ b/views/addblog.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create Blog</title>
+  <title>BLOGIFY</title>
   <style>
     * {
       margin: 0;
