--- a/views/addblog.ejs
+++ b/views/addblog.ejs
@@ -123,7 +123,7 @@
     <div class="logo">BLOGIFY</div>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/posts">Blogs</a></li>
+      <li><a href="/posts">Posts</a></li>
       <li><a href="/about">About</a></li>
     </ul>
   </nav>
