--- a/views/addblog.ejs
+++ b/views/addblog.ejs
@@ -55,7 +55,7 @@ header::after {
 }
 
     /* Container */
-    .container {
+    .container1 {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -148,7 +148,7 @@ header::after {
 
 
   <!-- Form Container -->
-  <div class="container">
+  <div class="container1">
     <div class="card">
       <h2>Create New Blog</h2>
       <form action="/blog/new" method="post" enctype="multipart/form-data">
