--- a/views/addblog.ejs
+++ b/views/addblog.ejs
@@ -29,7 +29,11 @@ header {
   font-size: 1.5rem;
   font-weight: bold;
 }
-
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+}
 nav ul {
   float: right;
   list-style: none;
