--- a/views/addblog.ejs
+++ b/views/addblog.ejs
@@ -144,6 +144,9 @@ header::after {
         <li><a href="/">Home</a></li>
         <li><a href="/posts">Posts</a></li>
         <li><a href="/about">About</a></li>
+          <% if (locals.user) { %>
+          <!-- Add Blog Link -->
+          <li><a href="/blog/add-newblog">Add Blog</a></li>
 
       </ul>
     </nav>
